@@ -8,6 +8,7 @@ v2.0.5
 ! IMDB-Link for person search in demo was wrong
 + movie class: new method yearspan() for e.g. serials spanning multiple production years
 ! IMDB site changes broke actors filmographies, quotes, user comments, trivia
+* adaption to imdb::storyline() as suggested by an anonymous user
 
 v2.0.4 (28.12.2010)
 -------------------
